# Salli_work

./: README.md
catkin_ws/build_isolated/: catkin_make_isolated.cache
catkin_ws/build_isolated/airsim_ros_pkgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/airsim_ros_pkgs/AirLib/: Makefile  cmake_install.cmake
catkin_ws/build_isolated/airsim_ros_pkgs/MavLinkCom/: Makefile  cmake_install.cmake
catkin_ws/build_isolated/airsim_ros_pkgs/atomic_configure/: .rosinstall  (+1 more)
catkin_ws/build_isolated/catkin_simple/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/kdtree/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/octomap/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/odom_visualization/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/pointcloudTraj/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/pose_utils/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/quadrotor_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/transformation/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/vfh3d/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/waypoint_generator/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel_isolated/airsim_ros_pkgs/: .catkin  setup.sh
catkin_ws/devel_isolated/catkin_simple/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel_isolated/kdtree/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel_isolated/octomap/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel_isolated/odom_visualization/: local_setup.sh  setup.sh
catkin_ws/devel_isolated/pointcloudTraj/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel_isolated/pose_utils/: .rosinstall  _setup_util.py
catkin_ws/devel_isolated/sophus/: setup.bash  setup.sh  setup.zsh
catkin_ws/devel_isolated/transformation/: .catkin  local_setup.sh
catkin_ws/devel_isolated/vfh3d/: .catkin  .rosinstall  setup.sh
catkin_ws/devel_isolated/waypoint_generator/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/src/: .rosinstall
catkin_ws/src/airsim_ros_pkgs/: CMakeLists.txt
catkin_ws/src/ewok-replanning-rrt_original/: .gitmodules  dasd
catkin_ws/src/transformation/: CMakeLists.txt  package.xml
catkin_ws/src/transformation/include/transformation/: depth_image.h  pct_transformation.h  vfh_transformation.h
catkin_ws/src/transformation/launch/: depth_image.launch  pct_transformation.launch  vfh_transformation.launch
catkin_ws/src/transformation/src/: depth_image.cpp  depth_image_node.cpp  pct_transformation.cpp  pct_transformation_node.cpp  vfh_transformation.cpp  vfh_transformation_node.cpp
scripts/: install_system.sh
scripts/drone-manual-control/: airsim-drone-control.py  requirements.sh
settings/: settings.json
(+328 files in other folders)
